# cross-encoder-mechinterp

./: .gitignore  DATASET_CONSTRUCTION.md  README.md  output.json  pyproject.toml
configs/: negation_v0.yaml  negation_v1.yaml  patching_v0.yaml
data/release/negation_v0/: gold.jsonl
data/release/negation_v1/: gold.jsonl  gold_curated.jsonl
notebooks/: 01_exploration.ipynb
scripts/: 01_download_data.py  02_build_index.py  03_generate_queries.py  04_retrieve_candidates.py  05_mine_pairs.py  06_filter_and_tag.py  07_sample_gold.py  08_eval_baselines.py  10_curate_gold.py  11_patching_scan.py  12_ablation_validation.py  run_pipeline.sh
src/constraintsuite/: __init__.py  data_loading.py  evaluation.py  filtering.py  llm_utils.py  pair_mining.py  patching.py  query_generation.py  retrieval.py  tagging.py  utils.py
tests/: test_pair_mining.py  test_patching.py
